# Battaglia_navale

./: Action.h  BattleShip.cpp  BattleShip.h  CMakeList.txt  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  Coordinates.cpp  Coordinates.h  GamePlay.cpp  GamePlay.h  Grid.cpp  Grid.h  GridCell.cpp  GridCell.h  HumanPlayer.cpp  HumanPlayer.h  NavalUnit.cpp  NavalUnit.h  Player.cpp  Player.h  Submarine.cpp  Submarine.h  SupportVessel.cpp  SupportVessel.h  battaglia_navale.cpp  main.cpp
